--- a/HISTORY
+++ b/HISTORY
@@ -3,6 +3,14 @@ GAMBIT Revision History
 Full details can be found in the git log.  Only a summary of the
 changes in each new version is given here.
 
+v1.1.0
+Feature release.
+- Added support for Mathematica backends
+- Added support for DDCalc 1.1.0 (featuring XENON-1T and PICO-60 2017)
+- Updated PrecisionBit likelihoods to use PDG 2017 values
+- Updated DecayBit decay data to use PDG 2017 values
+- Additional sanity checks in cmake compiler selection
+- Fixed bug preventing proper operation of hdf5 combination with T-walk
 
 v1.0.1 - June 2017
 Bugfix release.
