Added ColliderBit changes for v1.1 to version history. 	modified:   HISTORY

--- a/HISTORY
+++ b/HISTORY
@@ -3,7 +3,7 @@ GAMBIT Revision History
 Full details can be found in the git log.  Only a summary of the
 changes in each new version is given here.
 
-v1.1.0
+v1.1.0 - August 2017
 Feature release.
 - Added support for Mathematica backends
 - Added support for DDCalc 1.1.0 (featuring XENON-1T and PICO-60 2017)
@@ -13,6 +13,14 @@ Feature release.
 - Updated DecayBit decay data to use PDG 2017 values
 - Added option for turning on loop corrections to direct detection cross-sections computed with DarkSUSY
 - Made MicrOmegas use decays from GAMBIT as default
+- Included signal statistical uncertainty in collider nuisance pdf by default
+- Add handling of Simplified Likelihood covariance matrices for multi-SR limits in ColliderBit
+- Numerical stability improvements in P4 vector class
+- ColliderBit now uses GAMBIT's thread-safe random number generator
+- Added 1D efficiency map and efficiency functor objects in ColliderBit
+- Added a jet reclustering helper function for ColliderBit
+- Added filter_* and ifilter_* analysis helper functions for ColliderBit
+- Decoupled ColliderBit implementation headers from module types
 - Additional sanity checks in cmake compiler selection
 - Fixed bug preventing proper operation of hdf5 combination with T-walk
 
