--- a/HISTORY
+++ b/HISTORY
@@ -3,6 +3,10 @@ GAMBIT Revision History
 Full details can be found in the git log.  Only a summary of the
 changes in each new version is given here.
 
+v1.1.1
+Bugfix release.
+- Fixed cmake bug preventing compilation on systems with Mathematica installed but without libuuid.
+
 v1.1.0
 Feature release.
 - Added support for Mathematica backends
