Updated HISTORY and README.md
	modified:   HISTORY
	modified:   README.md

--- a/HISTORY
+++ b/HISTORY
@@ -3,6 +3,11 @@ GAMBIT Revision History
 Full details can be found in the git log.  Only a summary of the
 changes in each new version is given here.
 
+v1.5.1
+Bugfix release
+- Fixed faulty patch files for versions 2.6.3 and 2.9.4 of the classy backend
+- Support for DarkSUSY 6.1.1, and 6.2.2
+
 v1.5.0
 Feature release
 - Added CosmoBit module
