--- a/HISTORY
+++ b/HISTORY
@@ -6,6 +6,7 @@ changes in each new version is given here.
 v1.5.1
 Bugfix release
 - Fixed faulty patch files for versions 2.6.3 and 2.9.4 of the classy backend
+- Fixed bug in Planck 2019 lowl TTEE (Does not affect published results)
 - Support for DarkSUSY 6.1.1, and 6.2.2
 
 v1.5.0
